Compleate the task

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
 .container {
 	border-radius: 5px;
 	color: var(--color-white, #fff);
+	font-size: 14px;
+	margin: 100px;
 }
 
 header {
@@ -52,8 +54,6 @@ header #description {
 
 /* Form */
 #survey-form {
-	/* display: flex;
-	flex-direction: column; */
 	padding: 20px;
 	width: 500px;
 	background-color: rgba(27, 27, 50, 0.8);
@@ -76,13 +76,26 @@ header #description {
 }
 
 /* Radio */
-.text-radio {
-	margin-left: -8px;
+.text-group {
+	text-align: left;
+	margin-left: -10px;
 }
 
 .label input {
 	margin-left: -25px;
 	width: 50px;
+}
+
+/* Button */
+.form-group button {
+	width: 465px;
+	margin: 20px 0;
+	background-color: var(--color-green, #37af65);
+	border: none;
+	color: var(--color-white, #fff);
+	border-radius: 3px;
+	padding: 10px 32px;
+	cursor: pointer;
 }
 
 /* Responsive Breakpoint */
@@ -93,15 +106,27 @@ header #description {
 	}
 
 	#survey-form {
-		width: 400px;
+		width: 350px;
 	}
 
 	.form-group label,
 	.form-group input {
-		width: 350px;
+		width: 300px;
 	}
 
 	.form-group select {
-		width: 365px;
+		width: 325px;
+	}
+
+	.text-group {
+		margin-left: -10px;
+	}
+
+	.label input {
+		width: 50px;
+	}
+
+	.form-group textarea {
+		width: 315px;
 	}
 }
